--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
 body{
-    font-family: 'Big Shoulders Display', cursive;
-font-family: 'Dancing Script', cursive;
-font-family: 'Inter', sans-serif;
-font-family: 'Lemonada', cursive;
-font-family: 'Potta One', cursive;
-font-family: 'Roboto', sans-serif;
-}
+    font-family: 'Poppins', sans-serif;
+    }
 h1{
     font-size: 50px;
+}
+.name-highlight{
+    color: chocolate;
 }
