--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@ h1{
     font-size: 50px;
 }
 h3{
-    color: rgb(255, 255, 255);
+    color: rgb(29, 24, 24);
 }
 p{
-    color:#ffffff;
+    color:hsl(0, 64%, 10%);
 }
 .name-highlight{
     color: chocolate;
@@ -22,21 +22,29 @@ p{
 .half-width img{
     width:100%;
     height:500px;
-    /* background-image: url("images/bg.PNG"); */
 }
-img ::hover{
-    color: bisque;
+.top-banner{
+    /* background-color: rgba(255, 251, 0, 0.897); */
+    /* background-image: url("images/bg.PNG"); */
 }
 section{
     height: 500px;
-    background-image: url("images/bg.PNG");
     background-repeat: no-repeat;
-    z-index: -80px;
+    padding-bottom: 150px;
 }
 .link-button{
     background-color: tan;
     text-decoration: none;
     padding: 10px 10px;
-    color: rgb(68, 6, 21);
+    color:  white;
     border-radius: 5px;
+    background-image: linear-gradient(45deg, lightSalmon, tomato);
+    font-weight: 700px;
+}
+h2{
+    font-size: 50px;
+}
+h3{
+    font-size: 40px;
+    color: tomato;
 }
